--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Minecraft Base</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Design for a Minecraft Base</h1>
-    <p>Make sure to dig down far enough to have sufficient space!</p>
-</body>
+  <!-- Adjust container positioning here -->
+  <div class="logo_outline" style="top: -10px; left: 250px;">
+    <div class="logo_text">
+        HIDIVE
+    </div>
+  </div>
 
+  <div class="simulcasts_outline" style="top: -89px; left: 390px;">
+    <div class="other_options_text">
+      SIMULCASTS
+    </div>
+  <div>
+</body>
 </html>
+
+
+
+
+<a id="hdLogo" href="/index.html" title="HIDIVE">
+  <img src="Images/HIDIVE_logo_.svg" class="resize_logo">
+</a>
